--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,18 @@ services:
       #   target: /var/www/html/vendor
     # depends_on:
     #   - mysql
+  postgresql:
+      image: postgres:15rc2-alpine
+      restart: always
+      environment:
+        POSTGRES_USER: go-demo
+        POSTGRES_PASSWORD: password
+        PGPASSWORD: password123
+        POSTGRES_DB: go-demo
+      ports:
+        - "5432:5432"
+      volumes:
+        - postgres-data:/var/lib/postgresql/data
+        
+volumes:
+  postgres-data:
